# autoware.universe

.github/: CODEOWNERS
latest/: sitemap.xml
latest/common/tier4_screen_capture_rviz_plugin/: index.html
latest/launch/tier4_sensing_launch/: index.html
latest/perception/image_projection_based_fusion/: index.html
latest/perception/map_based_prediction/Readme/: index.html
latest/perception/traffic_light_classifier/: index.html
latest/planning/behavior_path_planner/behavior_path_planner_avoidance-design/: index.html
latest/search/: search_index.json
latest/system/system_error_monitor/: index.html
main/: sitemap.xml
main/launch/tier4_sensing_launch/: index.html
main/map/map_loader/: index.html
main/system/system_error_monitor/: index.html
perception/autoware_ground_segmentation/: CMakeLists.txt  package.xml
perception/autoware_ground_segmentation/launch/: patchwork.launch.xml
perception/autoware_mtr/: CMakeLists.txt  README.md  package.xml
perception/autoware_mtr/config/: mtr.param.yaml
perception/autoware_mtr/include/autoware/mtr/: mtr_node.hpp  trt_mtr.hpp
perception/autoware_mtr/include/autoware/mtr/archetype/: agent.hpp  exception.hpp  fixed_queue.hpp  map.hpp  polyline.hpp  result.hpp  tensor.hpp
perception/autoware_mtr/include/autoware/mtr/conversion/: lanelet.hpp  tracked_object.hpp
perception/autoware_mtr/include/autoware/mtr/debug/: marker.hpp
perception/autoware_mtr/include/autoware/mtr/processing/: cpu_postprocessor.hpp  cpu_preprocessor.hpp  postprocessor.hpp  preprocessor.hpp  processor.hpp
perception/autoware_mtr/launch/: mtr.launch.xml
perception/autoware_mtr/schema/: mtr.schema.json
perception/autoware_mtr/src/: mtr_node.cpp  trt_mtr.cpp
perception/autoware_mtr/src/archetype/: agent.cpp  polyline.cpp
perception/autoware_mtr/src/conversion/: lanelet.cpp  tracked_object.cpp
perception/autoware_mtr/src/debug/: marker.cpp
perception/autoware_mtr/src/processing/: cpu_postprocessor.cpp  cpu_preprocessor.cpp  postprocessor.cpp  preprocessor.cpp  processor.cpp
perception/autoware_mtr/test/: test_agent.cpp  test_cpu_postprocessor.cpp  test_cpu_preprocessor.cpp  test_exception.cpp  test_fixed_queue.cpp  test_map.cpp  test_polyline.cpp  test_result.cpp  test_tensor.cpp
perception/autoware_predicted_path_postprocessor/: CMakeLists.txt  README.md  package.xml
perception/autoware_predicted_path_postprocessor/config/: predicted_path_postprocessor.param.yaml  refine_by_speed.param.yaml  sample_processor.param.yaml
perception/autoware_predicted_path_postprocessor/docs/: refine_by_speed.md
perception/autoware_predicted_path_postprocessor/include/autoware/predicted_path_postprocessor/: builder.hpp  composable.hpp  interface.hpp  node.hpp
perception/autoware_predicted_path_postprocessor/include/autoware/predicted_path_postprocessor/debug/: intermediate_publisher.hpp
perception/autoware_predicted_path_postprocessor/include/autoware/predicted_path_postprocessor/processor/: builder.hpp  composable.hpp  interface.hpp  refine_by_speed.hpp
perception/autoware_predicted_path_postprocessor/include/autoware/predicted_path_postprocessor/processors/: refine_by_speed.hpp  sample_processor.hpp
perception/autoware_predicted_path_postprocessor/launch/: predicted_path_postprocessor.launch.xml
perception/autoware_predicted_path_postprocessor/src/: composable.cpp  node.cpp
perception/autoware_predicted_path_postprocessor/src/debug/: intermediate_publisher.cpp
perception/autoware_predicted_path_postprocessor/src/processor/: composable.cpp  refine_by_speed.cpp
perception/autoware_predicted_path_postprocessor/src/processors/: refine_by_speed.cpp
perception/autoware_predicted_path_postprocessor/test/: test_refine_by_speed.cpp
perception/autoware_simpl/: CMakeLists.txt  README.md
perception/autoware_simpl/autoware_simpl_python/: README.md  package.xml  setup.cfg  setup.py
perception/autoware_simpl/src/: simpl_node.cpp
perception/autoware_simpl/test/: test_polyline.cpp  test_preprocessor.cpp  test_tensor.cpp  test_with_data.cpp
perception/ground_segmentation/: CMakeLists.txt  package.xml
perception/ground_segmentation/config/: patchwork.params.yaml
perception/patchworkpp/: CMakeLists.txt  README.md  package.xml
perception/patchworkpp/config/: params.yaml  patchworkpp.params.yaml
perception/patchworkpp/include/patchworkpp/: params.hpp  patchworkpp.hpp
perception/patchworkpp/launch/: patchworkpp.launch.xml
perception/patchworkpp/schema/: patchworkpp.schema.json
perception/patchworkpp/src/: params.cpp  patchworkpp.cpp
sensing/autoware_pointcloud_preprocessor/: CMakeLists.txt  package.xml
(+66 files in other folders)
