<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autoware_predicted_path_postprocessor</name>
  <version>0.0.0</version>
  <description>The ROS 2 package for post-processing predicted paths.</description>
  <maintainer email="kotaro.uetake@tier4.jp">Kotaro Uetake</maintainer>
  <license>Apatch License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>

  <depend>autoware_interpolation</depend>
  <depend>autoware_perception_msgs</depend>
  <depend>autoware_utils_geometry</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
